--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="STANDARDmade NFTs"
+      name="STANDARDmade"
       content="Extraordinary digital collectables inspired by uniformed professionals [ETH @ 0.0420 | MATIC @ 420]"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/made192.png" />
