--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <meta name="description" content="kITt: keep IT testing" />
+    <link rel="apple-touch-icon" href="/made192.svg" />
     <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <title>STANDARDmade</title>
     <script defer="defer" src="/static/js/main.4086f4d7.js"></script>
     <link href="/static/css/main.8753d0ef.css" rel="stylesheet">
 </head>
