--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="kITt: keep IT testing" />
     <link rel="apple-touch-icon" href="/made192.svg" />
     <link rel="manifest" href="/manifest.json" />
-    <title>STANDARDmade</title>
+    <title>kITt: by STANDARDmade</title>
     <script defer="defer" src="/static/js/main.4086f4d7.js"></script>
     <link href="/static/css/main.8753d0ef.css" rel="stylesheet">
 </head>
