--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/made.svg" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="kITt: keep IT testing" />
-    <link rel="apple-touch-icon" href="/made192.svg" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>kITt: by STANDARDmade</title>
-    <script defer="defer" src="/static/js/main.4086f4d7.js"></script>
-    <link href="/static/css/main.8753d0ef.css" rel="stylesheet">
-</head>
-
-<body><noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-</body>
-
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="/favicon.ico" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta name="description" content="Web site created using create-react-app" />
+        <link rel="apple-touch-icon" href="/logo192.png" />
+        <link rel="manifest" href="/manifest.json" />
+        <title>kITt: by STANDARDmade</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+    </body>
 </html>
